tests/snapshots/test_runner__tests__compiler__typecheck__refutable_let_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Option<T> { Some(T), None }

let foo = (x: Option<Integer>): Integer => {
  let Some(x) = x
  x
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/refutable_let_1.kk:4:7
  │
4 │   let Some(x) = x
  │       ^^^^^^^ Let Binding Refutable Pattern
  │
  = Refutable pattern (non-exhaustive) pattern is not allowed for let binding.
    The cases that are not matched are:

      None
